<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".UI.GameInfoFragment"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <ImageView
                android:id="@+id/fragment_game_info_image"
                android:layout_width="250dp"
                android:layout_height="160dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:id="@+id/fragment_game_info_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_image"
                app:layout_constraintStart_toStartOf="@+id/fragment_game_info_image"
                app:layout_constraintEnd_toEndOf="@+id/fragment_game_info_image"
                android:layout_marginTop="5dp"
                android:textSize="25sp"
                android:textColor="@color/black"
                />

            <ImageButton
                android:id="@+id/fragment_game_info_download"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintStart_toEndOf="@+id/fragment_game_info_name"
                app:layout_constraintTop_toTopOf="@+id/fragment_game_info_name"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_game_info_name"
                android:src="@drawable/ic_download"
                android:background="@color/white"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_game_info_screen_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_name"
                />

            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="4"
                app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_screen_rv"
                >
                <TextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:text="Call of Duty: Warzone is both a standalone free-to-play battle royale and modes accessible via Call of Duty: Modern Warfare. Warzone features two modes — the general 150-player battle royle, and “Plunder”. The latter mode is described as a “race to deposit the most Cash”. In both modes players can both earn and loot cash to be used when purchasing in-match equipment, field upgrades, and more. Both cash and XP are earned in a variety of ways, including completing contracts.\r\n\r\nAn interesting feature of the game is one that allows players who have been killed in a match to rejoin it by winning a 1v1 match against other felled players in the Gulag.\r\n\r\nOf course, being a battle royale, the game does offer a battle pass. The pass offers players new weapons, playable characters, Call of Duty points, blueprints, and more. Players can also earn plenty of new items by completing objectives offered with the pass."
                    />

                <ImageButton
                    android:id="@+id/expand_collapse"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="5dp"
                    android:layout_gravity="right|bottom"
                    android:background="@android:color/transparent"
                    />
            </com.ms.square.android.expandabletextview.ExpandableTextView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_info_game_const"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/oval"
                android:padding="15dp"
                app:layout_constraintTop_toBottomOf="@+id/expand_text_view"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <TextView
                    android:id="@+id/fragment_game_info_main_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_info"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/fragment_game_info_genre_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/genre_title"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_main_info" />

                <TextView
                    android:id="@+id/fragment_game_info_developer_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/developer_title"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_genre_title" />

                <TextView
                    android:id="@+id/fragment_game_info_publisher_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/publisher_title"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_developer_title" />

                <TextView
                    android:id="@+id/fragment_game_info_release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/release_date_title"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_publisher_title" />

                <TextView
                    android:id="@+id/fragment_game_info_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/teal_200"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_genre_title"
                    app:layout_constraintTop_toBottomOf="@id/fragment_game_info_main_info" />

                <TextView
                    android:id="@+id/fragment_game_info_developer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_developer_title"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_genre" />

                <TextView
                    android:id="@+id/fragment_game_info_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_publisher_title"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_developer" />

                <TextView
                    android:id="@+id/fragment_game_info_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_release_date_title"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_publisher" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/info_const"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_info_game_const"
                android:layout_margin="16dp"
                android:padding="15dp"
                android:background="@drawable/oval"
                android:layout_marginBottom="16dp"
                >
                <TextView
                    android:id="@+id/fragment_game_info_min_sys_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/min_sys_title"
                    android:textSize="16sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    />

                <TextView
                    android:id="@+id/fragment_game_info_min_os_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_min_sys_title"
                    app:layout_constraintStart_toStartOf="@+id/fragment_game_info_min_sys_title"
                    android:textSize="14sp"
                    android:text="@string/min_os_title"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:id="@+id/fragment_game_info_min_processor_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_min_os_title"
                    app:layout_constraintStart_toStartOf="@+id/fragment_game_info_min_sys_title"
                    android:textSize="14sp"
                    android:text="@string/min_processor_title"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/fragment_game_info_min_memory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_min_processor_title"
                    app:layout_constraintStart_toStartOf="@+id/fragment_game_info_min_sys_title"
                    android:textSize="14sp"
                    android:text="@string/min_memory_title"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/fragment_game_info_min_graphics_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_min_memory_title"
                    app:layout_constraintStart_toStartOf="@+id/fragment_game_info_min_sys_title"
                    android:textSize="14sp"
                    android:text="@string/min_graphics_title"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/fragment_game_info_min_storage_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_game_info_min_graphics_title"
                    app:layout_constraintStart_toStartOf="@+id/fragment_game_info_min_sys_title"
                    android:textSize="14sp"
                    android:text="@string/min_storage_title"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:id="@+id/fragment_game_info_min_os"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/fragment_game_info_min_os_title"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_game_info_min_os_title"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_min_os_title"
                    android:textSize="14dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/fragment_game_info_min_processor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/fragment_game_info_min_processor_title"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_game_info_min_processor_title"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_min_processor_title"
                    android:textSize="14dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/fragment_game_info_min_memory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/fragment_game_info_min_memory_title"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_game_info_min_memory_title"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_min_memory_title"
                    android:textSize="14dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/fragment_game_info_min_graphics"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/fragment_game_info_min_graphics_title"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_game_info_min_graphics_title"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_min_graphics_title"
                    android:textSize="14dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/fragment_game_info_min_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="@+id/fragment_game_info_min_storage_title"
                    app:layout_constraintBottom_toBottomOf="@+id/fragment_game_info_min_storage_title"
                    app:layout_constraintStart_toEndOf="@+id/fragment_game_info_min_storage_title"
                    android:textSize="14dp"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/black"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>